fixed overflow bg

--- a/src/app/schools/page.css
+++ b/src/app/schools/page.css
@@ -1,5 +1,5 @@
 .school-details-page{
-    padding: 100px 30px 0;
+    padding: 100px 30px 50px;
     background-color: var(--bg-color);
     width: 100%;
     min-height: 100vh;
